wwr/styles/rafting.css
:root {
    --primary-color: #0077B6;
    /*Honolulu Blue*/
    --secondary-color: #00B4D8;
    /*Pacific Cian*/
    --accent1-color: #CAFFBF;
    /*Honolulu Blue*/
    --accent2-color: #FFB703;
    --heading-font: "Bebas Neue", sans-serif;
    --body-font: "Work Sans", sans-serif;
    --title-font: "Winky Rough", sans-serif;

}

* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

body {
    font-family: var(--body-font);
    /* color: var(--accent2-color); */
    color: #000;
}

header,
main,
footer {
    /* width: 840px; */
    margin: 0 auto;
}

h1,
h2 {
    font-family: var(--title-font);
    color: var(--primary-color);
}

nav,
p,
section,
article {
    margin: 16px;
    padding: 8px;
}

/* ===HEADER=== */
header {
    display: grid;
    grid-template-columns: 80px 1fr 1fr;
    align-items: center;
    justify-content: center;
    background-color: var(--primary-color);
    height: auto;
}

header img {
    margin: 0 0.25rem 0 1rem;
    width: 55px;
    height: auto;
}

header h1 {
    font-size: 2rem;
    font-family: var(--title-font);
    color: #ffffff;
}

.navigation {
    display: flex;
    flex-wrap: wrap;
    list-style: none;
    padding: 0;
    font-family: Arial, sans-serif;
}

.navigation li {
    flex: 1 1 auto;
}

.navigation a {
    display: block;
    color: #ffffff;
    padding: 20px;
    text-decoration: none;
    font-size: 1.1rem;
}

.navigation a:hover {
    color: var(--accent1-color);
    font-weight: 700;
    /* text-decoration: underline; */
}

.navigation .active {
    color: var(--accent1-color);
    /* font-weight: 700; */
    /* text-decoration: underline; */
}



/* ===HERO=== */
.hero {
    position: relative;
}

.hero img {
    display: block;
    width: 100%;
    height: auto;
}

.hero h1 {
    position: absolute;
    top: 15px;
    width: 100%;
    padding: 5px;
    text-align: center;
    background: rgba(255, 183, 3, 0.7);
    color: #413e3e;
}

article {
    position: absolute;
    /* margin: 50px; */
    bottom: 60px;
    /* left: 25px; */
    background: rgba(0, 119, 182, .8);
    border: 1px solid #000;
    padding: 0.65rem;
    box-shadow: 0 0 30px #111;
    /* opacity: 0.8; */
}

article p {
    margin: 0;
    padding: 5px;
    color: white;
}

.hero article img {
    padding: 5px;
    float: right;
    width: 125px;
}

/* ===HISTORY=== */
.history {
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    gap: 20px;
}

.history h2 {
    grid-column: 1/4;
    text-align: center;
    font-size: 2rem;
}

.history img {
    max-width: 100%;
    height: auto;
    display: block;
}

.history p {
    max-width: 100%;
    height: auto;
    display: block;
}

.adventure {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    gap: 1px;
}

.adventure h2 {
    grid-column: 1/6;
    text-align: center;
    font-size: 2rem;
    margin: 15px;
}

.adventure figure {
    border: thin #c0c0c0 solid;
    display: flex;
    flex-flow: column;
    padding: 5px;
    max-width: 220px;
    margin: auto;
}

.adventure img {
    max-width: 100%;
    height: auto;
    display: block;
}

figcaption {
    /* background-color: var(--primary-color); */
    background-color: #413e3e;
    color: #fff;
    /* font: italic smaller sans-serif; */
    padding: 3px;
    text-align: center;
}

/* ===FOOTER=== */
footer {
    background-color: var(--primary-color);
    color: #ffffff;
    display: flex;
    justify-content: center;
    align-items: center;
    position: relative;
}

.socialmedia a {
    text-decoration: none;
    position: absolute;
    top: 10px;
    right: 25px;
    padding: 0.65rem;
}

footer nav a img {
    width: 30px;
    height: 30px;
}

footer nav .facebook {
    right: 100px;
}

footer nav .x-media {
    right: 60px;
}

